<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple Notes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty">...</string>
    <string name="nav_drawer_open">drawer menu open</string>
    <string name="nav_drawer_close">drawer menu returnResultCancel</string>

    <string name="prompt_title">Title</string>
    <string name="prompt_memo">Write some things</string>
    <string name="prompt_tags">Tags</string>
    <string name="prompt_datetime">Datetime</string>
    <string name="prompt_weather">Weather</string>
    <string name="prompt_location">Location</string>

    <string name="action_filter">Filter</string>
    <string name="action_star">Star</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>

    <string name="message_error_plus">"Error: "</string>

    <string name="message_dialog_waiting">Please waiting…</string>
    <string name="message_dialog_open_network">This action requite Internet connection. Do you want open this?</string>
    <string name="message_dialog_open_gps">This action requite GPS connection. Do you want open this?</string>

    <string name="title_dialog_question">Question?</string>

    <string name="title_book">Books</string>
    <string name="title_memos">Memo</string>
    <string name="title_tags">Tags</string>
    <string name="title_reminders">reminders</string>
    <string name="title_stars">Stars</string>
    <string name="title_setting">Setting</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_about">About</string>
    <string name="title_attack">Attach</string>
    <string name="title_info">Info</string>
    <string name="action_save">Save</string>
    <string name="prompt_search">Search keyword</string>

</resources>